# term_check

./: CHANGELOG.md  README.md  term-check.cabal
app/: Examples.hs  Main.hs  PatternLambda.hs
app/TerminationChecking/: Examples.hs  Exec.hs  Lang.hs  Measure.hs  Misc.hs  Parser.hs  PatternLambda.hs  Solver.hs
examples/: README.md  ackermann.fun  assoc1.fun  assoc2.fun  assoc3.fun  bm.fun  counter_example.fun  evenOrOdd.fun  example1.fun  example3.fun  impossible_roll.fun  motivating_example.fun  non_size_change.fun  pchoice.fun  permute.fun  sparse_list.fun  total_decrease.fun  tree.fun  uneven_decr.fun  uneven_weight.fun
examples/not_solved/: assoc.fun  bm.fun  columnelim.fun  evenOrOdd.fun  growing.fun  non_size_change.fun  permute.fun
examples/prob/: test0.fun  test1.fun  test2.fun  test3.fun
