cabal-version:      2.4
name:               term-check
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Raphael Douglas Giles
-- maintainer:         firstname.lastname@email.provider

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable term-check
    main-is:          Main.hs
    other-modules:    TerminationChecking.Examples
                    , TerminationChecking.Exec
                    , TerminationChecking.Lang
                    , TerminationChecking.Parser
                    , TerminationChecking.Solver

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.0
                    , hmatrix >= 0.20
                    , hmatrix-glpk >= 0.4.0
                    , containers >= 0.6.0
                    , parsec >= 3.1.0
                    , optparse-applicative >= 0.17.0
    hs-source-dirs:   app
    default-language: Haskell2010
