cabal-version:      2.4
name:               term-check
version:            1.0.0

synopsis: Termination checking for recursive functions
bug-reports: https://github.com/vjackson725/term_check/issues

License:            GPL-3.0-only
License-file:       LICENSE
author:             Raphael Douglas Giles

category: Tools
extra-source-files: CHANGELOG.md

executable term-check
    main-is:          Main.hs
    other-modules:    TerminationChecking.Exec
                    , TerminationChecking.Lang
                    , TerminationChecking.Measure
                    , TerminationChecking.Parser
                    , TerminationChecking.Solver
    other-extensions: LambdaCase
                    , ScopedTypeVariables
                    , TupleSections
    build-depends:    base >= 4.16 && < 5
                    , hmatrix >= 0.20
                    , hmatrix-glpk >= 0.4.0
                    , containers >= 0.6.0
                    , parsec >= 3.1.0
                    , optparse-applicative >= 0.17.0
                    , split >= 0.2.5
    hs-source-dirs:   app
    default-language: Haskell2010
